# mai

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: benchmarks.yml  ci.yml
benchmarks/: CMakeLists.txt  README.md  access_pattern_benchmark.c  docker_access_patterns.sh  docker_stream_pressure_matrix.sh  mprotect_overhead_matrix.sh  policy_retained_matrix.py  sufficient_memory_matrix.sh  trace_heartbeat_matrix.sh
cmake/: frida-gum-download.cmake
docs/: policy_benchmark_results.md  predictive_migration.md
include/: malloc_interceptor.h
src/: CMakeLists.txt  cxx_intercepts.cpp  mai.c  malloc_interceptor.c
tests/: CMakeLists.txt  benchmark_test.c  cxx_runtime_test.cpp  docker_memory_limit_test.sh  exclusion_plugin.c  fortran_runtime_test.f90  local_allocator_plugin.c  mpi_runtime_test.c  python_language_runtime_test.py  python_runtime_test.py  runtime_plugin.c  runtime_test.c  source_policy_test.py
